src/objects/NQT_Add_new_Part__c.object
<CustomObject>
    <fields>
        <fullName>Business_Operation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Business Operation</description>
        <inlineHelpText>Business Operation</inlineHelpText>
        <label>Business Operation</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Part_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NQT_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added</description>
        <inlineHelpText>Added</inlineHelpText>
        <label>Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_CPR_Add_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select CPR</inlineHelpText>
        <label>CPR</label>
        <referenceTo>CPR__c</referenceTo>
        <relationshipName>Add_New_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NQT_Part_description__c</fullName>
        <inlineHelpText>Please enter Part description</inlineHelpText>
        <label>Part description</label>
        <length>51</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Part Request</label>
    <nameField>
        <label>New Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Part Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>